<resources>
    <string name="app_name">TESEO BY ϟ THOR ϟ </string>
    <string name="app_usuario">USUARIO</string>
    <string name="app_pass">CONTRASEÑA</string>
    <string name="app_url_login">https://simov.app/servicios/validar_usuario_teseo.php</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Unidad 007</string>
    <string name="nav_header_subtitle">Abdiel Carrasco</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">TESEO-PRINCIPAL</string>
    <string name="menu_qr_licencia">QR-LICENCIA</string>
    <string name="menu_consulta_poliza">CONSULTA-POLIZA</string>
    <string name="menu_radar">V-RADAR</string>
    <string name="menu_salir">SALIR</string>
    <string name="titulo_principal">ESPARRAGO PRINCIPAL</string>

    <string-array name="zonas_arrays">
        <item>SELECCIONA-ZONA-SECTOR</item>
        <item>NORTE-CENTRO</item>
        <item>NORTE-OTAY</item>
        <item>NORTE-AGUA-CALIENTE</item>
        <item>NORTE-5Y10</item>
        <item>SUR-NATURA</item>
        <item>SUR-BLV-BENITEZ</item>
        <item>SUR-DIAZ-ORDAZ</item>
        <item>ESTE-CARR-TECATE</item>
        <item>ESTE-LA-PRESA</item>
        <item>ESTE-LA-PRESA-NORTE</item>
        <item>ESTE-INSURGENTES</item>
        <item>ESTE-FLORIDO</item>
        <item>OESTE-PACIFICO</item>
        <item>OESTE-SANTE-FE</item>
        <item>PERIFERIA-PLAYAS</item>
        <item>PERIFERIA-SOLER</item>
        <item>PERIFERIA-ROSARITO</item>
        <item>PERIFERIA-TECATE</item>

        <item>PONIENTE-TURISTICO</item>
        <item>PONIENTE-CENTRO</item>
        <item>PONIENTE-SALIDA-TIJUANA</item>
        <item>ORIENTE/PRESA</item>
        <item>ORIENTE/LIBRAMIENTO</item>
        <item>ORIENTE/CORTEZ</item>
        <item>ORIENTE/ESMERALDA</item>
        <item>SUR/PLAYAS/HERMOSA</item>
        <item>SUR/GOBIERNO</item>
        <item>SUR/CHAPULTEPEC</item>
        <item>SUR/VILLAS</item>
        <item>FORANEO/MANEADERO/BAJA</item>
        <item>FORANEO/MANEADERO/ALTA</item>
        <item>FORANEO/BUFADORA</item>
        <item>FORANEO/VALLE/GPE</item>

    </string-array>

    <string-array name="infracciones_arrays">
        <item>SELECCIONE-INFRACCION</item>
        <item>FALTA DE PLACAS</item>
        <item>CIRCULA SIN PLACAS</item>
        <item>FALTA DE TARJETA CIRCULACION</item>
        <item>TARJETA CIRCULACION VENCIDA</item>
        <item>TRANSITAR EN EL CARRIL NO CORRESPONDIENTE</item>
        <item>SUBIR BAJAR PASAJE LUGAR INDEBIDO</item>
        <item>ESTACIONARSE EN LUGAR PROHIBIDO</item>
        <item>FALTA DE ESPEJO(S) RETROVISOR</item>
        <item>FALTA DE LUCES DELANTERAS</item>
        <item>FATLA DE LUCES TRASERAS-FRENO</item>
        <item>FALTA DE LUCES</item>
        <item>EXCESO DE PASAJE</item>
        <item>EXCESO DE CARGA</item>
        <item>TRASLADO DE MERCANCIA VIA PUBLICA</item>
        <item>IMPIDEN VISIBILIDAD AL CONDUCTOR</item>
        <item>MODIFICACION CARROCERIA</item>
        <item>FALTA DE ASEO AL OPERADOR</item>
        <item>MODIFICAR ASIENTOS PARA ACEPTAR MAS PASAJEROS</item>
        <item>SERVICIO DE PASAJEROS EN VEHICULO PARTICULAR</item>
        <item>NO CONTAR CON EL TIPO DE LICENCIA CORRESPONDIENTE</item>
        <item>NO REUNIR CONDICIONES DE IMAGEN Y COMODIDAD</item>
        <item>NO CONTAR CON REVISION MECANICA</item>
        <item>REVISION DE DOCUMENTOS</item>
        <item>PRESTAR SERVICIO INTERMUNICIPAL SIN PERMISO</item>
        <item>CONTAMINAR CON HUMO</item>
        <item>LLANTAS LISAS</item>
        <item>ROTULACION INAPROPIADA</item>
        <item>EXTINGUIDOR,BOTIQUIN</item>
        <item>VENTANAS ROTAS O SIN ELLA</item>
        <item>LIMPIA PARABRISAS</item>
        <item>TRABAJAR FUERA DE HORARIO DE 4 A 22HRS</item>
        <item>TRAER PUERTAS CERRADAS MIENTRAS LA UNIDA SE MUEVE</item>
        <item>OBSTRUCCION DE VISIBILIDAD DEL CONDUCTOR</item>
        <item>TENER VIGENTE POLIZA DAÑOS A TERCEROS</item>
        <item>UNIFORME OBLIGATORIO PARA PRESTAR EL SERVICIO</item>
        <item>POR CIRCULAR CON CAJUELA ABIERTA</item>
        <item>POR CIRCULAR CON MATERIAL FLAMABLE</item>
        <item>SIN NUMERO ECONOMICO</item>
        <item>POR CIRCULAR SIN NOMBRE DE LA RUTA A LOS COSTADOS</item>
        <item>CIRCULAR SIN LA LEYENDA DE TAXI A LOS COSTADOS</item>
        <item>FUMAR O TOMAR BEBIDAS ALCOHOLICAS EN LA UNIDAD</item>
        <item>ARROJAR BASURA U OBJETOS EN LA VIA PUBLICA</item>
        <item>OBSTRUIR CARRIL DE CIRCULACION</item>
        <item>REALIZAR TODO TIPO DE REPARACIONES MECANICAS</item>
        <item>HACER USO DE PARKIN AUN PAGANDO TARIFA</item>
        <item>VIDRIOS POLARIZADOS</item>
        <item>REALIZAR COBROS ADICIONALES</item>
        <item>POR NO CONTAR CON PERMISO EN SITIO O LANZADERAS</item>
        <item>ALTERAR MODIFICAR SISTEMA DE SONIDO NO ORIGINAL</item>
        <item>NO CONTAR CON EXAMEN TOXICOLOGICO</item>
        <item>NO TRAER LICENCIA</item>
        <item>POR ABASTASER COMBUSTIBLE CON PASAJE ABORDO</item>
        <item>POR UTILIZAR CELULAR O RADIO MIENTRAS CODUCE</item>
        <item>POR MODIFICAR ESCAPE O SILENCIADOR</item>
        <item>POR NO RESPETAR EL REGLAMENTO DE TRANSITO</item>
        <item>POR CIRCULAR EN RUTA DIFERENTE A LA REGISTRADA</item>

    </string-array>
    <string-array name="modalidad_arrays">
        <item>SELECCIONE-MODALIDAD</item>
        <item>PERMISO-TAXI-RUTA</item>
        <item>PERMISO-TAXI-SITIO</item>
        <item>PERMISO-TAXI-LIBRE</item>
        <item>PERMISO-CARGA</item>
        <item>PERMISO-ESCOLAR</item>
        <item>PERMISO-GRUA-ARRASTRE-ALMACENAMIENTO-Y-DEPOSITO</item>
        <item>MASIVO-UNTIMA</item>
        <item>MASIVO-CALAFIA</item>
        <item>MASIVO-CORREDOR-2000</item>
        <item>MASIVO-ALTISA</item>
        <item>MASIVO-AZUL-Y-BLANCO</item>
        <item>MASIVO-VERDE-Y-CREMA</item>
        <item>MASIVO-AMARILLO-Y-PERLA</item>
        <item>MASIVO-TIJUANENSES</item>
        <item>MASIVO-24-DE-FEBRERO</item>
        <item>MASIVO-SIN-REGISTRO</item>
        <item>ERT-UBER</item>
        <item>ERT-DIDI</item>
        <item>ERT-DIDI-FOOD</item>
        <item>ERT-SIN-REGISTRO</item>
        <item>TURISTICO-SIN-REGISTRO</item>
        <item>OTRO-SIN-REGISTRO</item>


    </string-array>


    <string name="title_activity_wsgob">Wsgob</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_wsgob_consulta">Consulta Placa</string>
    <string name="title_activity_infracciones">Infracciones</string>
    <string name="title_activity_camera">Camera</string>

    <!--Strings Home Fragment-->
    <string name="ZONA">ZONA-SECTOR</string>
    <string name="MODALIDAD">MODALIDAD</string>
    <string name="PLACA">NUMERO DE PLACA</string>
    <string name="CON_LICENCIA">CON LICENCIA</string>
    <string name="CON_PLACA">CON PLACA</string>
    <string name="NUMERO_LICENCIA">NÚMERO DE LICENCIA</string>
    <string name="INFRACCIONES">INFRACCIONES</string>
    <string name="INFRACCION">SELECCIONE - INFRACCIÓN</string>
    <string name="ELIMINAR">ELIMINAR</string>
    <string name="QR">QR GAFETE-TARJETON</string>
    <string name="foto_placa">FOTO PLACA</string>
    <string name="version">Gerencia de sistemas | IMOS | TESEO  Version-12.5.0 ▲</string>

    <!--Strings Infracciones-->
    <string name="INFRACIONES_THOR">INFRACIONES-THOR</string>
    <string name="COMENTARIOS">COMENTARIOS</string>
    <string name="TOMAR_FOTO">TOMAR FOTO</string>
    <string name="ENVIA_INFRACCION">ENVIAR INFRACCIÓN</string>

    <!--Strings consulta PLACAS Y LICENCIA-->
    <string name="placas_licencia">Datos Placas &amp; Licencias</string>
    <string name="titulo_principal_consulta">EL TESEO DICE :</string>
    <string name="LABEL_PLACA_CONSULTA">PLACA :</string>
    <string name="LABEL_ESTATUS">ESTATUS TC :</string>
    <string name="PROPIETARIO">PROPIETARIO :</string>
    <string name="NO_PLACAS">SIN - PLACA</string>
    <string name="VIGENCIA_TC">VIGENCIA TC :</string>
    <string name="VIM"> VIM/SERIE :</string>
    <string name="MARCA"> MARCA :</string>
    <string name="DATOS_PLACA"> DATOS :</string>
    <string name="DATOS_INFRACCION"> DATOS INFRACCIÓN :</string>
    <string name="NUMERO_INFRACCIONES"> INFRACCIONES :</string>
    <string name="SIN_INFRACCION"> SIN-INFRACCIONES </string>
    <string name="FECHA_INFRA"> FECHA INFRACCION :</string>
    <string name="DATA_LICENCIA"> DATOS LICENCIA :</string>
    <string name="SIN_LICENCIA"> SIN-LICENCIA :</string>
    <string name="NUMERO_LICENCIA_PUNTOS">NÚMERO DE LICENCIA :</string>
    <string name="NOMBRE_LICENCIA">NOMBRE LICENCIA :</string>
    <string name="VENCE_LICENCIA">FECHA VENCIMIENTO :</string>


    <!--Strings consulta POLIZA-->
    <string name="titulo_poliza">THOR - POLIZA</string>
    <string name="sin_poliza">SIN POLIZA</string>

    <!--Strings QR Licencia-->
    <string name="QR_licencia">ESCANEA LICENCIA</string>
    <string name="dato_lic">DATOS LICENCIA</string>


    <!--Urls WS-->
    <string name="URL_LICENCIA">https://simov.app/servicios/consultaLicencia.php</string>
    <string name="URL_INFRACCION">https://simov.app/servicios/consultaInfraccion.php</string>
    <string name="URL_POLIZA">https://simov.app/servicios/consultaPoliza.php</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>