<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_transito"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_qr_licencia"
            android:icon="@drawable/ic_qr"
            android:title="@string/menu_qr_licencia" />
        <item
            android:id="@+id/nav_consulta_poliza"
            android:icon="@drawable/ic_consulta"
            android:title="@string/menu_consulta_poliza" />
        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/ic_radar"
            android:title="@string/menu_radar" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_out"
            android:title="@string/menu_salir" />

    </group>

</menu>