<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.simov.teseo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_qr_licencia"
        android:name="app.simov.teseo.ui.qrlicencia.QrlicenciaFragment"
        android:label="@string/menu_qr_licencia"
        tools:layout="@layout/fragment_qrlicencia" />

    <fragment
        android:id="@+id/nav_consulta_poliza"
        android:name="app.simov.teseo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_consulta_poliza"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_radar"
        android:name="app.simov.teseo.ui.radar.RadarFragment"
        android:label="@string/menu_radar"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="app.simov.teseo.ui.out.OutFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_out" />

</navigation>