<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="app.simov.teseo.ui.slideshow.SlideshowFragment">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:alpha=".20"
        app:srcCompat="@drawable/imos"/>

<!--Titulos y cabeceraz-->
    <TextView
        android:id="@+id/tvApp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:textAlignment="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FAF8F8"/>

    <TextView
        android:id="@+id/tvUsuario"
        app:layout_constraintTop_toTopOf="@+id/tvApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="17dp"
        android:textAlignment="textStart"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="Abdiel Carrasco"
        android:textColor="#FFFFFF"/>



    <TextView
        android:id="@+id/tvMunicipio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUsuario"
        android:layout_margin="20dp"
        android:textAlignment="textStart"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="Tijuana"
        android:textColor="@color/titulosVerdes"/>
<!--Terminar Titlos y Cabeceras-->

<!--Botón QR-->
    <Button
        android:id="@+id/btnQr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cBoxLicencia"
        android:layout_marginTop="120dp"
        android:layout_marginStart="130dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/botonLogin"
        android:textColor="@color/white"
        android:text="@string/QR" />

<!--Fin Botón QR-->

<!--Empiezan Inputs y checkes-->
    <CheckBox
        android:id="@+id/cBoxLicencia"
        app:layout_constraintTop_toTopOf="@id/tvMunicipio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edtLicencia"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CON_LICENCIA"
        android:textColor="@color/titulosVerdes" />

    <EditText
        android:id="@+id/edtLicencia"
        app:layout_constraintTop_toTopOf="@id/tvMunicipio"
        app:layout_constraintStart_toEndOf="@id/cBoxLicencia"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:backgroundTint="@color/white"
        android:hint="@string/NUMERO_LICENCIA"
        android:inputType="textCapCharacters"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/cBoxPlaca"
        app:layout_constraintTop_toTopOf="@id/cBoxLicencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edtPlaca"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CON_PLACA"
        android:textColor="@color/titulosVerdes"
        />

    <EditText
        android:id="@+id/edtPlaca"
        app:layout_constraintTop_toTopOf="@id/edtLicencia"
        app:layout_constraintStart_toEndOf="@id/cBoxPlaca"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:backgroundTint="#FBFAFA"
        android:ems="10"
        android:hint="@string/PLACA"
        android:inputType="textCapCharacters"
        android:textAlignment="center"
        android:textColor="#FBF8F8"
        android:textColorHint="@color/white"
        android:textSize="18sp"
       />

<!--Termian Inputs y checks-->

    <Button
        android:id="@+id/btnConsulta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/botonLogin"
        android:textColor="@color/white"
        android:text="CONSULTA" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/titulosVerdes"/>


</androidx.constraintlayout.widget.ConstraintLayout>